// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostList Snapshots error renders correctly 1`] = `
<main>
  <h1>
    Test
  </h1>
  <p>
    <b
      style={
        Object {
          "color": "red",
        }
      }
    >
      ERROR
    </b>
    <br />
    General Error
  </p>
</main>
`;

exports[`PostList Snapshots loading renders correctly 1`] = `
<main>
  <h1>
    Test
  </h1>
  <p>
    loading..
  </p>
</main>
`;

exports[`PostList Snapshots success renders correctly 1`] = `
<main>
  <h1>
    Test
  </h1>
  <ul>
    <li>
      <b>
        Mocked Post 1
      </b>
      <br />
      <a
        href="https://css-tricks.com/creating-scheduled-push-notifications/"
        target="_blank"
      >
        https://css-tricks.com/creating-scheduled-push-notifications/
      </a>
    </li>
    <li>
      <b>
        Mocked Post 2
      </b>
      <br />
      <a
        href="https://www.cyon.ch/blog/Progressive-Web-Apps-PWA"
        target="_blank"
      >
        https://www.cyon.ch/blog/Progressive-Web-Apps-PWA
      </a>
    </li>
  </ul>
</main>
`;
